--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   | | | | (_) | | | | | |  __/ | (_| | | | | (_| |
   \_| |_/\___/|_| |_| |_|\___|_|\__,_|_| |_|\__,_|
   ------------------------------------------------
-                          https://gethomeland.com
+            https://github.com/ruby-china/homeland
 
   - Ruby:  <%= RUBY_VERSION %><%= "-p#{RUBY_PATCHLEVEL}" if defined? RUBY_PATCHLEVEL %>
   - Rails: <%= Rails.version %>
@@ -22,7 +22,7 @@
     <title><%= content_for?(:title) ? yield(:title) : Setting.app_name %></title>
     <meta name="apple-mobile-web-app-capable" content="no">
     <meta content='True' name='HandheldFriendly'>
-    <link rel="alternate" type="application/rss+xml" title="订阅最新帖" href="<%= main_app.feed_topics_url %>">
+    <link rel="alternate" type="application/rss+xml" title="Subscribe" href="<%= main_app.feed_topics_url %>">
     <%= stylesheet_pack_tag "front", "data-turbolinks-track": "reload" %>
     <%= stylesheet_pack_tag "turbolinks-app", 'data-turbolinks-track': 'reload' if turbolinks_app? %>
     <%= yield :stylesheets %>
@@ -46,7 +46,7 @@
         <div class="navbar-header" data-turbolinks-permanent>
           <%= raw Setting.navbar_brand_html %>
         </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle ="collapse" data-target="#main-navbar">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar">
           <span class="navbar-toggler-icon"><i class="fa fa-bars"></i></span>
         </button>
         <div id="main-navbar"  class="collapse navbar-collapse">
