--- a/app/views/layouts/simple.html.erb
+++ b/app/views/layouts/simple.html.erb
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div id="main" class="main-container container">
-      <%= notice_message %>
+      <%= render AlertComponent.new %>
       <%= yield %>
     </div>
     <footer class="footer">
