--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 <div class="alert alert-info">
   <%= t("admin.dashboard.boot_at_html", time: (l(Homeland.boot_at.in_time_zone(Time.zone), format: :long)) ) %> (<%= timeago Homeland.boot_at %>)
-  <%= link_to icon_tag("power-off", label: t("admin.reboot")), reboot_admin_dashboards_path, data: { method: :post, confirm: "你确定要重启 Homeland 吗？", disable_with: "请求中..." }, class: "text-danger pull-right" %>
+  <%= link_to icon_tag("power-off", label: t("admin.reboot")), main_app.reboot_admin_dashboards_path, data: { method: :post, confirm: "你确定要重启 Homeland 吗？", disable_with: "请求中..." }, class: "text-danger pull-right" %>
 </div>
 <% if Setting.legecy_envs.any? %>
   <div class="alert alert-warning">
