Fix Bootstrap V5 load.
https://github.com/twbs/bootstrap/issues/33840

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,6 +8,7 @@
     <%= csrf_meta_tag %>
   </head>
   <body>
+    <%= javascript_pack_tag "bootstrap", 'data-turbolinks-eval': "false" %>
     <div class="header">
       <div class="header navbar navbar-expand flex-md-row bd-navbar">
         <div class="container d-sm-flex">
