--- a/app/views/topics/ban.js.erb
+++ b/app/views/topics/ban.js.erb
@@ -1,3 +1,1 @@
-$('#ban-modal').remove();
-$('body').append("<%= j(render('ban', topic: @topic)) %>");
-$('#ban-modal').modal();
+App.modal("<%= j(render('ban', topic: @topic)) %>");
