--- a/app/views/users/reward.js.erb
+++ b/app/views/users/reward.js.erb
@@ -1,3 +1,1 @@
-$('#reward-model').remove();
-$('body').append("<%= j(render('reward'))%>");
-$('#reward-modal').modal();
+App.modal("<%= j(render('reward'))%>")
