Fix new topic with node_id, form select

--- a/app/javascript/admin/index.scss
+++ b/app/javascript/admin/index.scss
@@ -118,7 +118,7 @@ table {
     color: #aaa;
 
     .badge {
-      color: var(--gray);
+      color: var(--text-color1);
       border-radius: 12px;
       border: 1px solid var(--btn-secondary-border-color);
       font-size: 12px;
