Group site config

--- a/app/javascript/homeland/_vars.scss
+++ b/app/javascript/homeland/_vars.scss
@@ -70,6 +70,7 @@ $yellow: #dbc12d;
   --card-box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.04),
     0 1px 2px 0 rgba(0, 0, 0, 0.03);
   --card-border-color: hsla(210, 8%, 51%, 0.09);
+  --card-inset-border-color: hsla(210, 8%, 51%, 0.15);
   --card-background-color: #fff;
   --card-title-secondary-color: #777;
 
