--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -55,6 +55,7 @@
   --navbar-topic-title-background-color: #0e0e10;
 
   --card-border-color: #a3acd024;
+  --card-inset-border-color: #a3acd024;
   --card-background-color: #dcdcff0f;
   --card-title-secondary-color: #777;
 
