--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if target.errors.any? %>
   <div class="alert alert-block alert-danger">
     <div class="d-flex jcsb">
-      <strong><%= t("common.error_message_title", count: target.errors.count) %></strong>
+      <div class="alert-block-title"><%= t("common.error_message_title", count: target.errors.count) %></div>
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     </div>
     <ul>
