Fix the wrong floor for replies

--- a/app/views/replies/_create_callback.js.erb
+++ b/app/views/replies/_create_callback.js.erb
@@ -2,8 +2,7 @@ if($("#replies").length == 0){
   Turbolinks.visit(location.href);
 } else {
   if ($(".reply[data-id=<%= reply.id %>]").length == 0) {
-    var current_floor = parseInt($("#replies").data("last-floor")) + 1;
-    var dom = $('<%= j(render(ReplyComponent.new(reply: reply, topic: reply.topic, reply_counter: reply.topic.replies_count - 1))) %>');
+    let dom = $('<%= j(render(ReplyComponent.new(reply: reply, topic: reply.topic, reply_counter: reply.topic.replies.with_deleted.size))) %>');
     $("#replies .items").append(dom);
     $("#replies .total b").text('<%= reply.topic.replies_count %>');
     $('#topic-sidebar .total b').text('<%= reply.topic.replies_count %>');
