--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -28,7 +28,7 @@
       <td><%%= l(item.created_at, format: :long) %></td>
       <td>
         <%%= link_to "", edit_<%= singular_table_name %>_path(item.id), class: "fa fa-edit" %>
-        <%%= link_to "", <%= singular_table_name %>_path(item.id), method: :delete, 'data-confirm' => '确定要删除吗?', class: "fa fa-trash" %>
+        <%%= link_to "", <%= singular_table_name %>_path(item.id), method: :delete, 'data-confirm' => '确定要删除吗？', class: "fa fa-trash" %>
       </td>
     </tr>
     <%% end %>
