Upgrade Npms for try to fix Webpacker precompile in production env.

--- a/app/javascript/homeland/iconfont.scss
+++ b/app/javascript/homeland/iconfont.scss
@@ -1,7 +1,8 @@
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
-@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
-@import "~@fortawesome/fontawesome-free/scss/solid.scss";
-@import "~@fortawesome/fontawesome-free/scss/brands.scss";
+
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
+@import "@fortawesome/fontawesome-free/scss/solid";
+@import "@fortawesome/fontawesome-free/scss/brands";
 
 .fa {
   &-pin {
