--- a/app/javascript/homeland/iconfont.scss
+++ b/app/javascript/homeland/iconfont.scss
@@ -1,4 +1,4 @@
-$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+$fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
 @import "@fortawesome/fontawesome-free/scss/solid";
