--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,7 +11,7 @@
           <%= render "shared/error_messages", target: resource %>
           <div class="form-group">
             <%= f.text_field :email, type: :email, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.email") %>
-            <p class="form-text text-muted">此功能将会发送一个找回密码的特别链接到你的邮箱，通过改链接可以进入重置密码的页面。</p>
+            <p class="form-text text-muted"><%= t('users.find_password_help_text')%></p>
           </div>
           <div class="form-group">
             <div class="input-group input-group-lg">
@@ -20,7 +20,7 @@
           </div>
 
           <div class="form-actions">
-            <%= f.submit "找回密码", class: "btn btn-lg btn-block btn-primary", 'data-disable-with' => t("common.submitting") %>
+            <%= f.submit t('users.find_password'), class: "btn btn-lg btn-block btn-primary", 'data-disable-with' => t("common.submitting") %>
           </div>
         <% end %>
       </div>
