--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -1137,3 +1137,16 @@ img.emoji {
     }
   }
 }
+
+.embed-responsive {
+  @extend .ratio;
+
+  &-16by9 {
+    @extend .ratio-16x9;
+  }
+
+  &-item {
+    width: 100%;
+    height: 100%;
+  }
+}
