[andy] add group uploader
[andy] add group controller

[andy] add group controller

[andy] add group routes

[andy] add group user controller & pages

[andy] add group user controller & pages

[andy] add group user controller & pages

[andy] resolved some page and css issue

[andy] resolved group topics page and css issue

[andy] resolved group topics page and css issue

[andy] resolved group topics page and css issue

[andy] resolved group topics page and css issue

[andy] resolved group topics page and css issue

--- a/app/views/topics/_sidebar_for_topic_index.html.erb
+++ b/app/views/topics/_sidebar_for_topic_index.html.erb
@@ -9,7 +9,8 @@
 
 <div class="card">
   <div class="card-body">
-    <%= link_to t('topics.new_topic'), main_app.new_topic_path(node: @node&.id), class: 'btn btn-primary btn-block' %>
+    <% group_id ||= nil %>
+    <%= link_to t('topics.new_topic'), main_app.new_topic_path(node: @node&.id, group_id: group_id), class: 'btn btn-primary btn-block' %>
   </div>
 </div>
 <% end %>
