--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -931,26 +931,59 @@ kbd {
   .media-object {
     border-radius: 120px;
   }
+  .media-square-object {
+    border-radius: 5px;
+  }
 }
 .avatar-16 {
   width: 16px;
   height: 16px;
   border-radius: 120px;
 }
+.avatar-square-16 {
+  width: 16px;
+  height: 16px;
+  border-radius: 5px;
+}
 .avatar-32 {
   width: 28px;
   height: 28px;
   border-radius: 120px;
+}
+.avatar-square-32 {
+  width: 28px;
+  height: 28px;
+  border-radius: 5px;
 }
 .avatar-48 {
   width: 40px;
   height: 40px;
   border-radius: 120px;
 }
+.avatar-square-48 {
+  width: 60px;
+  height: 60px;
+  border-radius: 5px;
+}
+.avatar-60 {
+  width: 96px;
+  height: 96px;
+  border-radius: 120px;
+}
+.avatar-square-60 {
+  width: 60px;
+  height: 60px;
+  border-radius: 5px;
+}
 .avatar-96 {
   width: 96px;
   height: 96px;
   border-radius: 120px;
+}
+.avatar-square-96 {
+  width: 96px;
+  height: 96px;
+  border-radius: 5px;
 }
 @media (max-width: 480px) {
   .avatar-48 {
