--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
     <meta content='True' name='HandheldFriendly'>
     <link rel="alternate" type="application/rss+xml" title="Subscribe" href="<%= main_app.feed_topics_url %>">
     <%= stylesheet_pack_tag "front", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag 'applications', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag "turbolinks-app", 'data-turbolinks-track': 'reload' if turbolinks_app? %>
     <%= yield :stylesheets %>
     <%= javascript_pack_tag "application",  defer: false %>
