--- a/app/javascript/front/index.scss
+++ b/app/javascript/front/index.scss
@@ -1032,3 +1032,10 @@ textarea.div-dropzone-focus {
     }
   }
 }
+
+.btn-joined {
+  border: 1px solid #BBBBBB;
+  box-sizing: border-box;
+  background-color: white;
+  color: #666666;
+}
