--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -128,29 +128,68 @@ h2 {
 .group-user-modal-content {
   border-radius: 10px;
   width: 400px;
-  max-height: 432px;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.08);
+  font-family: PingFang SC;
+  font-style: normal;
+  font-weight: normal;
+  color: #111111;
   .header {
     height: 52px;
     background: rgba(34, 94, 218, 0.1);
     border-radius: 10px 10px 0px 0px;
     .content {
-      padding: 15px;
+      padding-top: 16px;
+      padding-bottom: 16px;
+      padding-left: 24px;
+      padding-right: 24px;
     }
+    font-size: 15px;
+    line-height: 21px;
   }
   .body {
+    height: 330px;
     background-color: #ffffff;
     min-height: 200px;
-    .content {
-      padding: 15px;
+    margin-left: 24px;
+    margin-right: 24px;
+    .avatar-square-48 {
+      height: 40px;
+      width: 40px;
     }
+    .avatar {
+      margin-right: 6px;
+    }
+    .title {
+      margin-bottom: 4px;
+    }
+    .content {
+      padding-top: 24px;
+    }
+    .content-hearder {
+      padding-bottom: 24px;
+      border-bottom: 1px solid rgba(0, 0, 1, 0.03);
+    }
+    font-size: 13px;
+    line-height: 18px;
   }
   .footer {
     min-height: 50px;
     background-color: #F4F4F4;
     border-radius: 0px 0px 10px 10px;
+    min-height: 50px;
     .content {
-      padding: 15px;
+      padding-top: 12px;
+      padding-bottom: 12px;
+      padding-right: 24px;
+      padding-left: 24px;
     }
+    .btn {
+      height: 26px;
+      min-width: 56px;
+      margin-left: 10px;
+    }
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
   }
 }
