--- a/app/components/group_component.html.slim
+++ b/app/components/group_component.html.slim
@@ -1,23 +1,22 @@
 - cache([group, group.avatar]) do
-  div class=("group topic media group-#{group.id}") data-prefetch="#{main_app.group_path(group)}"
+  div class=("group media group-#{group.id}") data-prefetch="#{main_app.group_path(group)}"
     .avatar
       = user_avatar_tag(group, :md)
     .infos.media-body
       .title.media-heading
         - if group.public_group? || group.group_member?(current_user)
-          = link_to(main_app.topics_group_path(group), title: group.name) do
-            = group.name
+          = link_to(group.name, main_app.topics_group_path(group), title: group.name, class: 'group-title')
         - else
-          = link_to(main_app.group_path(group), title: group.name) do
-            = group.name
+          = link_to(group.name, main_app.group_path(group), title: group.name, class: 'group-title')
       .info
         = group.description
     .media-right
       - group_user = group.group_users.where(user_id: current_user.id).last if current_user.present?
       - if group_user.present?
         - if group_user.accepted?
-          = link_to('Joined', edit_group_group_users_path(group_id: group.id), class: "btn btn-primary btn-joined btn-block", remote: true)
+          = link_to(t('groups.joined'), edit_group_group_users_path(group_id: group.id), class: "btn btn-joined btn-borderless", remote: true)
         - elsif group_user.pendding?
-          = link_to('Waiting', edit_group_group_users_path(group_id: group.id), class: "btn btn-primary", remote: true)
+          = link_to(t('groups.waiting'), edit_group_group_users_path(group_id: group.id), class: "btn btn-borderless", remote: true)
       - else
-        = link_to('Apply to join', edit_group_group_users_path(group_id: group.id), class: "btn btn-primary", remote: true)
+        - text = group.private_group? ? t('groups.apply_to_join_group') : t('groups.join_group')
+        = link_to(text, edit_group_group_users_path(group_id: group.id), class: "btn btn-borderless", remote: true)
