--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -973,6 +973,11 @@ kbd {
   height: 16px;
   border-radius: 5px;
 }
+.avatar-square-24 {
+  width: 24px;
+  height: 24px;
+  border-radius: 5px;
+}
 .avatar-32 {
   width: 28px;
   height: 28px;
